--- a/resource/style.css
+++ b/resource/style.css
@@ -5,21 +5,21 @@
 
 #campoMinato {
     margin: 0 auto;
-    width: 1000px;
-    height: 1000px;
+    width: 500px;
+    height: 500px;
 }
 
 .facile {
-    width: 50px;
-    height: 50px;
+    width: 13%;
+    height: 13%;
 }
 
 .medio {
-    width: 40px;
-    height: 40px;
+    width: 11%;
+    height: 11%;
 }
 
 .difficile {
-    width: 30px;
-    height: 30px;
+    width: 10%;
+    height: 10%;
 }
